# wharf

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
docs/: about-default-paths.md  how-to-remove-non-existent-paths.md  how-to-restore-backup.md
examples/: config.example.toml  config.toml  wharf.example.json  wharf.json
legacy/: install.sh  uninstall.sh  wharf
src/: config.rs  error.rs  errors.rs  main.rs  storage.rs  utils.rs
src/commands/: add.rs  autoremove.rs  edit.rs  export.rs  generate.rs  import.rs  list.rs  mod.rs  remove.rs  search.rs  show.rs
