[package]
name = "wharf"
version = "1.3.0"
edition = "2024"

[[bin]]
name = "wharf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
dirs = "6.0.0"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
